fix: footer offices should wrap on smaller screens

--- a/src/components/navigation/footer/footer.module.css
+++ b/src/components/navigation/footer/footer.module.css
@@ -165,6 +165,7 @@
   font-weight: 500;
   line-height: 120%;
   padding: 0;
+  flex-wrap: wrap;
 }
 
 .dotSeparator:not(:last-child)::after {
